# Genare

./: .gitignore  genare.py  main.py  pyproject.toml
genare_app/: __init__.py  app.py  settings.py  types.py
genare_app/mixins/: __init__.py  ai.py  audio.py  conversation.py  notifications.py  terminal.py  ui.py
